[package]
name = "dvb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", features = ["signers", "signer-mnemonic", "signer-keystore", "signer-wallet"] }
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
libp2p = { version = "0.53.2", features = ["tokio", "gossipsub", "mdns", "tcp", "tls", "dns", "async-std", "noise", "yamux", "macros"] }
rand = "0.8.5"
revm = { version = "9.0.0", features = ["ethersdb"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
